# job-market-medallion-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
src/: database.py  extract.py  loader.py  process.py  profiler.py
week1/: .gitignore  README.md  main.py
week1/src/: extract.py  loader.py  process.py  profiler.py
week2/: .gitignore  README.md  find_skill_gaps.py  jobs_d1.db  prompt_model.py  pyproject.toml  rate_limits.txt  resume.txt  tag_data.py  testdata.py
week2/resources/: jobs_d1.db
week3/: .gitignore  README.md  docker-compose.yml  pyproject.toml
week3/backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
week3/backend/data/3_gold/: jobs.db
week3/backend/src/week_2/: jobs.db
week3/frontend/: .env  Dockerfile  README.md  pyproject.toml
week3/frontend/src/: app.py
week3/frontend/src/templates/: Dashboard.html  chat_page.html
