[project]
name = "resume-skill-analyzer"
version = "0.1.0"
description = "A local data pipeline to analyze resume skill gaps."
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4",
    "bs4>=0.0.2",
    "pydantic",
    "ruff",
]

[tool.ruff]
# Target Python 3.14
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# Enable standard linting rules (E = Error, F = Pyflakes)
select = ["E", "F"]
