[project]
name = "week-2"
version = "0.1.0"
description = "Week 2: LLM Prompting and Skill Gap Analytics Pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "google-genai>=0.1.1",
    "pydantic>=2.10",
    "python-dotenv>=1.0.1",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "tqdm>=4.66.0",
]

[tool.uv]
managed = true
